--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -15,6 +15,10 @@
         <div id="root">
             <gmap-map :center="center"
                       :zoom="7">
+                <gmap-marker :position="markerPosition"
+                             :clickable="true"
+                             :draggable="false">
+                </gmap-marker>
             </gmap-map>
         </div>
     </body>
@@ -29,23 +33,28 @@
 
         new Vue({
             el: '#root',
-            data: function() {
+            data: function () {
                 return {
                     center: {
                         // Poland geolocation
                         lat: 51.9194,
                         lng: 19.1451
+                    },
+                    markerPosition: {
+                        lat: 51.9194,
+                        lng: 19.1451
                     }
                 }
             },
-            ready: function() {
+            ready: function () {
                 if (navigator.geolocation) {
-                    navigator.geolocation.getCurrentPosition(function(position) {
+                    navigator.geolocation.getCurrentPosition(function (position) {
                         this.center = {
                             lat: position.coords.latitude,
                             lng: position.coords.longitude
                         };
-                    }, function() {/* on error */});
+                    }, function () {/* on error */
+                    });
                 }
             }
         });
