--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -2,3 +2,17 @@
     width: 100%;
     height: calc(100vh - 16px);
 }
+
+body {
+    background: #f5f5f5;
+}
+
+.v-spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -50px;
+    width: 100px;
+    height: 100px;
+}
