--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -14,6 +14,14 @@
 
     <body>
         <div id="root">
+            <div class="top-bar">
+                <!--<form th:action="@{/connect/facebook}" method="POST">-->
+                <!--<input type="hidden" name="scope" value="public_profile,email,user_friends,user_posts"/>-->
+                <!--<p>-->
+                <!--<button type="submit">Connect to Facebook</button>-->
+                <!--</p>-->
+                <!--</form>-->
+            </div>
             <div v-if="!mapReady">
                 <clip-loader :loading="!mapReady"
                              :color="loaderColor">
