--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -55,3 +55,11 @@ body {
 .top-bar {
 
 }
+
+.login-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 6px;
+    margin-bottom: 6px;
+}
