backend connected to frontend

--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -1,11 +1,11 @@
 .vue-map-container {
     width: 100%;
-    height: calc(100vh - 16px);
+    height: calc(100vh - 116px);
 }
 
 body {
     background: #f5f5f5;
-    font-family: Arial, serif;
+    font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
 }
 
 .v-spinner {
@@ -53,5 +53,19 @@ body {
 }
 
 .top-bar {
+    display: flex;
+    flex-direction: row;
+}
 
+.top-bar h1 {
+    flex: 1;
+    margin: 20px;
+    font-weight: 400;
+    color: #00695C;
+    font-size: 50px;
+}
+
+.top-bar button {
+    margin: 23px;
+    font-size: 13px;
 }
