--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -69,3 +69,80 @@ body {
     margin: 23px;
     font-size: 13px;
 }
+
+.modal-mask {
+    position: fixed;
+    z-index: 9998;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
+    display: table;
+    transition: opacity .3s ease;
+}
+
+.modal-wrapper {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.modal-container {
+    width: 300px;
+    margin: 0px auto;
+    padding: 20px 30px;
+    background-color: #fff;
+    border-radius: 2px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
+    transition: all .3s ease;
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+.modal-body {
+    margin: 20px 0;
+}
+
+.modal-default-button {
+    float: right;
+    margin: 10px;
+}
+
+.modal-enter {
+    opacity: 0;
+}
+
+.modal-leave-active {
+    opacity: 0;
+}
+
+.modal-enter .modal-container,
+.modal-leave-active .modal-container {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.tweet {
+    display: flex;
+    flex-direction: column;
+    border-top: solid 1px gray;
+    padding: 5px;
+}
+
+.tweet-title {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+}
+
+.tweet-title-name {
+    font-weight: bold;
+    flex: 1;
+}
+
+.tweet-title-date {
+    font-style: italic;
+}
+
+.tweet-content {
+    margin: 10px;
+}
